--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,19 @@
     <description>New Register API using Clean Architecture.</description>
     <properties>
         <java.version>17</java.version>
-<!--        <spring-security.version>6.2.1</spring-security.version>-->
-<!--        <spring.version>6.1.2</spring.version>-->
+        <spring-security.version>6.2.1</spring-security.version>
+        <spring.version>6.1.2</spring.version>
     </properties>
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.security</groupId>-->
-<!--            <artifactId>spring-security-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
