--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
 
 cors:
   origins: ${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
+
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my-secret-key}
